[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster"
version = "1.0.3"
authors = [
  { name="Nikita Okhotnikov", email="nikiquark@gmail.com" },
]
description = "A package for work with HPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nikiquark/cluster"
"Bug Tracker" = "https://github.com/nikiquark/cluster/issues"
